--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 #hello.springmvc 패키지와 그 하위 로그 레벨 설정
 logging.level.hello.springmvc = trace
+# 테스트 환경
+# logging.level.hello.springmvc = debug
+# error 로그만 출력 된다.
+# logging.level.hello.springmvc = error
