json data parsing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ logging.level.hello.springmvc = trace
 # logging.level.hello.springmvc = debug
 # error 로그만 출력 된다.
 # logging.level.hello.springmvc = error
+
+spring.thymeleaf.prefix=classpath:/templates
+spring.thymeleaf.suffix=.html
